--- a/index.html
+++ b/index.html
@@ -4,56 +4,84 @@
   <meta charset="UTF-8">
   <title>Rodrigo Xavier | IBM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
-      font-family: Arial, Helvetica, sans-serif;
-      background: #ffffff;
-      color: #000;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background: #f7f9fb;
+      color: #161616;
       text-align: center;
-      padding: 40px 20px;
+      padding: 60px 20px;
     }
+
+    .card {
+      background: #ffffff;
+      max-width: 420px;
+      margin: auto;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+    }
+
     h1 {
-      margin-bottom: 5px;
+      font-size: 24px;
+      margin-bottom: 6px;
     }
+
     h2 {
+      font-size: 15px;
       font-weight: normal;
-      color: #555;
+      color: #525252;
       margin-top: 0;
       margin-bottom: 30px;
+      line-height: 1.4;
     }
+
     a.button {
       display: block;
-      margin: 12px auto;
+      margin: 12px 0;
       padding: 14px;
-      max-width: 420px;
       text-decoration: none;
-      border: 2px solid #0f62fe;
-      color: #0f62fe;
-      border-radius: 6px;
-      font-weight: bold;
-    }
-    a.button:hover {
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 15px;
       background: #0f62fe;
-      color: #fff;
+      color: #ffffff;
+    }
+
+    a.button.secondary {
+      background: #ffffff;
+      color: #0f62fe;
+      border: 1.5px solid #0f62fe;
+    }
+
+    a.button:hover {
+      opacity: 0.9;
+    }
+
+    footer {
+      margin-top: 30px;
+      font-size: 12px;
+      color: #8d8d8d;
     }
   </style>
 </head>
 <body>
 
-  <h1>Rodrigo Xavier</h1>
-  <h2>Account Technical Leader (ATL)<br>IBM Regional Sul</h2>
+  <div class="card">
+    <h1>Rodrigo Xavier</h1>
+    <h2>
+      Account Technical Leader (ATL)<br>
+      IBM Regional Sul
+    </h2>
 
-  <a class="button" href="https://www.ibm.com" target="_blank">
-    IBM – Official Website
-  </a>
+    <a class="button" href="https://www.ibm.com" target="_blank">
+      IBM – Official Website
+    </a>
 
-  <a class="button" href="https://wa.me/5519971016594" target="_blank">
-    Conversar no WhatsApp
-  </a>
+    <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-xavier-798b1381/" target="_blank">
+      LinkedIn
+    </a>
 
-  <a class="button" href="https://www.linkedin.com/in/rodrigo-xavier-798b1381/" target="_blank">
-    LinkedIn
-  </a>
-
-</body>
-</html>
+    <a class="button secondary" href="rodrigo_xavier.vcf">
+      S
