--- a/index.html
+++ b/index.html
@@ -84,4 +84,13 @@
     </a>
 
     <a class="button secondary" href="rodrigo_xavier.vcf">
-      S
+      Salvar contato
+    </a>
+
+    <footer>
+      © IBM • Professional Contact
+    </footer>
+  </div>
+
+</body>
+</html>
