--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
   <title>Rodrigo Xavier | IBM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Ícones (Font Awesome – CDN free) -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-      background: #f7f9fb;
+      background: #f4f6f8;
       color: #161616;
-      text-align: center;
-      padding: 60px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
     }
 
     .card {
       background: #ffffff;
+      width: 100%;
       max-width: 420px;
-      margin: auto;
       padding: 40px 30px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      border-radius: 14px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .logo {
+      margin-bottom: 20px;
+    }
+
+    .logo img {
+      width: 90px;
     }
 
     h1 {
@@ -32,13 +49,15 @@
       font-size: 15px;
       font-weight: normal;
       color: #525252;
-      margin-top: 0;
       margin-bottom: 30px;
       line-height: 1.4;
     }
 
     a.button {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
       margin: 12px 0;
       padding: 14px;
       text-decoration: none;
@@ -56,40 +75,60 @@
     }
 
     a.button:hover {
-      opacity: 0.9;
+      opacity: 0.92;
     }
 
     footer {
-      margin-top: 30px;
+      margin-top: 28px;
       font-size: 12px;
       color: #8d8d8d;
     }
   </style>
 </head>
+
 <body>
 
   <div class="card">
+
+    <!-- Logo IBM -->
+    <div class="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/IBM_logo.svg" alt="IBM Logo">
+    </div>
+
     <h1>Rodrigo Xavier</h1>
     <h2>
       Account Technical Leader (ATL)<br>
       IBM Regional Sul
     </h2>
 
-    <a class="button" href="https://www.ibm.com" target="_blank">
-      IBM – Official Website
+    <!-- Email -->
+    <a class="button secondary" href="mailto:rxavier@br.ibm.com">
+      <i class="fa-solid fa-envelope"></i>
+      E-mail
     </a>
 
+    <!-- WhatsApp -->
+    <a class="button secondary" href="https://wa.me/5519971016594" target="_blank">
+      <i class="fa-brands fa-whatsapp"></i>
+      WhatsApp
+    </a>
+
+    <!-- LinkedIn -->
     <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-xavier-798b1381/" target="_blank">
+      <i class="fa-brands fa-linkedin"></i>
       LinkedIn
     </a>
 
-    <a class="button secondary" href="rodrigo_xavier.vcf">
+    <!-- vCard -->
+    <a class="button" href="rodrigo_xavier.vcf">
+      <i class="fa-solid fa-address-card"></i>
       Salvar contato
     </a>
 
     <footer>
-      © IBM • Professional Contact
+      © IBM • Professional Digital Card
     </footer>
+
   </div>
 
 </body>
