--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Rodrigo Xavier | IBM</title>
+  <title>Rodrigo XAVIER | IBM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Ícones (Font Awesome – CDN free) -->
@@ -95,14 +95,14 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/IBM_logo.svg" alt="IBM Logo">
     </div>
 
-    <h1>Rodrigo Xavier</h1>
+    <h1>Rodrigo XAVIER</h1>
     <h2>
       Account Technical Leader (ATL)<br>
       IBM Regional Sul
     </h2>
 
     <!-- Email -->
-    <a class="button secondary" href="mailto:rxavier@br.ibm.com">
+    <a class="button secondary" href="mailto:rXAVIER@br.ibm.com">
       <i class="fa-solid fa-envelope"></i>
       E-mail
     </a>
@@ -114,13 +114,13 @@
     </a>
 
     <!-- LinkedIn -->
-    <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-xavier-798b1381/" target="_blank">
+    <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-XAVIER-798b1381/" target="_blank">
       <i class="fa-brands fa-linkedin"></i>
       LinkedIn
     </a>
 
     <!-- vCard -->
-    <a class="button" href="rodrigo_xavier.vcf">
+    <a class="button" href="rodrigo_XAVIER.vcf">
       <i class="fa-solid fa-address-card"></i>
       Salvar contato
     </a>
