--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </h2>
 
     <!-- Email -->
-    <a class="button secondary" href="mailto:rXAVIER@br.ibm.com">
+    <a class="button secondary" href="mailto:rxavier@br.ibm.com">
       <i class="fa-solid fa-envelope"></i>
       E-mail
     </a>
@@ -114,13 +114,13 @@
     </a>
 
     <!-- LinkedIn -->
-    <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-XAVIER-798b1381/" target="_blank">
+    <a class="button secondary" href="https://www.linkedin.com/in/rodrigo-xavier-798b1381/" target="_blank">
       <i class="fa-brands fa-linkedin"></i>
       LinkedIn
     </a>
 
     <!-- vCard -->
-    <a class="button" href="rodrigo_XAVIER.vcf">
+    <a class="button" href="rodrigo_xavier.vcf">
       <i class="fa-solid fa-address-card"></i>
       Salvar contato
     </a>
